packages/flutter_wasmit/ios/Classes/frb.h

typedef struct wire_ArcStdSyncMutexModule {
  const void *ptr;
} wire_ArcStdSyncMutexModule;
typedef struct wire_CompiledModule {
  struct wire_ArcStdSyncMutexModule field0;
} wire_CompiledModule;
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_StringList {
  struct wire_uint_8_list **ptr;
  int32_t len;
} wire_StringList;
typedef struct wire_EnvVariable {
  struct wire_uint_8_list *name;
  struct wire_uint_8_list *value;
} wire_EnvVariable;
typedef struct wire_list_env_variable {
  struct wire_EnvVariable *ptr;
  int32_t len;
} wire_list_env_variable;
typedef struct wire_PreopenedDir {
  struct wire_uint_8_list *wasm_guest_path;
  struct wire_uint_8_list *host_path;
} wire_PreopenedDir;
typedef struct wire_list_preopened_dir {
  struct wire_PreopenedDir *ptr;
  int32_t len;
} wire_list_preopened_dir;
typedef struct wire_WasiConfigNative {
  bool capture_stdout;
  bool capture_stderr;
  bool inherit_stdin;
  bool inherit_env;
  bool inherit_args;
  struct wire_StringList *args;
  struct wire_list_env_variable *env;
  struct wire_StringList *preopened_files;
  struct wire_list_preopened_dir *preopened_dirs;
} wire_WasiConfigNative;
typedef struct wire_WasiStackLimits {
  uintptr_t initial_value_stack_height;
  uintptr_t maximum_value_stack_height;
  uintptr_t maximum_recursion_depth;
} wire_WasiStackLimits;
typedef struct wire_ModuleConfigWasmi {
  struct wire_WasiStackLimits *stack_limits;
  uintptr_t *cached_stacks;
  bool *mutable_global;
  bool *sign_extension;
  bool *saturating_float_to_int;
  bool *tail_call;
  bool *extended_const;
  bool *floats;
} wire_ModuleConfigWasmi;
typedef struct wire_ModuleConfigWasmtime {
  bool *debug_info;
  bool *wasm_backtrace;
  bool *native_unwind_info;
  uintptr_t *max_wasm_stack;
  bool *wasm_threads;
  bool *wasm_simd;
  bool *wasm_relaxed_simd;
  bool *relaxed_simd_deterministic;
  bool *wasm_multi_memory;
  bool *wasm_memory64;
  uint64_t *static_memory_maximum_size;
  bool *static_memory_forced;
  uint64_t *static_memory_guard_size;
  bool *parallel_compilation;
  bool *generate_address_map;
} wire_ModuleConfigWasmtime;
typedef struct wire_ModuleConfig {
  bool *multi_value;
  bool *bulk_memory;
  bool *reference_types;
  bool *consume_fuel;
  struct wire_ModuleConfigWasmi *wasmi;
  struct wire_ModuleConfigWasmtime *wasmtime;
} wire_ModuleConfig;
typedef struct wire_WasmitInstanceId {
  uint32_t field0;
} wire_WasmitInstanceId;
typedef struct wire_WasmitModuleId {
  uint32_t field0;
} wire_WasmitModuleId;
typedef struct wire_WFunc {
  const void *ptr;
} wire_WFunc;
typedef struct wire_Global {
  const void *ptr;
} wire_Global;
typedef struct wire_Table {
  const void *ptr;
} wire_Table;
typedef struct wire_Memory {
  const void *ptr;
} wire_Memory;
typedef struct wire_RwLockSharedMemory {
  const void *ptr;
} wire_RwLockSharedMemory;
typedef struct wire_WasmitSharedMemory {
  struct wire_RwLockSharedMemory field0;
} wire_WasmitSharedMemory;
typedef struct wire_ModuleImport {
  struct wire_uint_8_list *module;
  struct wire_uint_8_list *name;
  struct wire_ExternalValue value;
} wire_ModuleImport;
typedef struct wire_list_module_import {
  struct wire_ModuleImport *ptr;
  int32_t len;
} wire_list_module_import;
typedef union WasmValKind {
  struct wire_WasmVal_i32 *i32;
  struct wire_WasmVal_i64 *i64;
  struct wire_WasmVal_f32 *f32;
  struct wire_WasmVal_f64 *f64;
  struct wire_WasmVal_v128 *v128;
  struct wire_WasmVal_funcRef *funcRef;
  struct wire_WasmVal_externRef *externRef;
} WasmValKind;
typedef struct wire_WasmVal {
  int32_t tag;
  union WasmValKind *kind;
} wire_WasmVal;
typedef struct wire_list_value_ty {
  int32_t *ptr;
  int32_t len;
} wire_list_value_ty;
typedef struct wire_MemoryTy {
  bool shared;
  uint32_t minimum;
  uint32_t *maximum;
} wire_MemoryTy;
typedef struct wire_TableArgs {
  uint32_t minimum;
  uint32_t *maximum;
} wire_TableArgs;
typedef struct wire_Atomics {
  uintptr_t field0;
} wire_Atomics;
struct wire_ArcStdSyncMutexModule new_ArcStdSyncMutexModule(void);
struct wire_Global new_Global(void);
struct wire_Memory new_Memory(void);
struct wire_RwLockSharedMemory new_RwLockSharedMemory(void);
struct wire_StringList *new_StringList_0(int32_t len);
struct wire_Table new_Table(void);
struct wire_WFunc new_WFunc(void);
struct wire_WFunc *new_box_autoadd_WFunc_0(void);
struct wire_Atomics *new_box_autoadd_atomics_0(void);
bool *new_box_autoadd_bool_0(bool value);
struct wire_CompiledModule *new_box_autoadd_compiled_module_0(void);
struct wire_MemoryTy *new_box_autoadd_memory_ty_0(void);
struct wire_ModuleConfig *new_box_autoadd_module_config_0(void);
struct wire_ModuleConfigWasmi *new_box_autoadd_module_config_wasmi_0(void);
struct wire_ModuleConfigWasmtime *new_box_autoadd_module_config_wasmtime_0(void);
struct wire_TableArgs *new_box_autoadd_table_args_0(void);
uint32_t *new_box_autoadd_u32_0(uint32_t value);
uint64_t *new_box_autoadd_u64_0(uint64_t value);
uintptr_t *new_box_autoadd_usize_0(uintptr_t value);
struct wire_WasiConfigNative *new_box_autoadd_wasi_config_native_0(void);
struct wire_WasiStackLimits *new_box_autoadd_wasi_stack_limits_0(void);
struct wire_WasmVal *new_box_autoadd_wasm_val_0(void);
struct wire_WasmitInstanceId *new_box_autoadd_wasmit_instance_id_0(void);
struct wire_WasmitModuleId *new_box_autoadd_wasmit_module_id_0(void);
struct wire_WasmitSharedMemory *new_box_autoadd_wasmit_shared_memory_0(void);
struct wire_list_env_variable *new_list_env_variable_0(int32_t len);
struct wire_list_module_import *new_list_module_import_0(int32_t len);
struct wire_list_preopened_dir *new_list_preopened_dir_0(int32_t len);
struct wire_list_value_ty *new_list_value_ty_0(int32_t len);