packages/wasmit/lib/src/bridge_generated.io.dart


  late final _new_ArcStdSyncMutexModulePtr =
      _lookup<ffi.NativeFunction<wire_ArcStdSyncMutexModule Function()>>(
          'new_ArcStdSyncMutexModule');
  late final _new_ArcStdSyncMutexModule = _new_ArcStdSyncMutexModulePtr
      .asFunction<wire_ArcStdSyncMutexModule Function()>();

  wire_Global new_Global() {
    return _new_Global();
  }

  late final _new_GlobalPtr =
      _lookup<ffi.NativeFunction<wire_Global Function()>>('new_Global');
  late final _new_Global = _new_GlobalPtr.asFunction<wire_Global Function()>();

  wire_Memory new_Memory() {
    return _new_Memory();
  }

  late final _new_MemoryPtr =
      _lookup<ffi.NativeFunction<wire_Memory Function()>>('new_Memory');
  late final _new_Memory = _new_MemoryPtr.asFunction<wire_Memory Function()>();

  wire_RwLockSharedMemory new_RwLockSharedMemory() {
    return _new_RwLockSharedMemory();
  }

  late final _new_RwLockSharedMemoryPtr =
      _lookup<ffi.NativeFunction<wire_RwLockSharedMemory Function()>>(
          'new_RwLockSharedMemory');
  late final _new_RwLockSharedMemory = _new_RwLockSharedMemoryPtr
      .asFunction<wire_RwLockSharedMemory Function()>();

  ffi.Pointer<wire_StringList> new_StringList_0(
    int len,
  ) {
    return _new_StringList_0(
      len,
    );
  }

  late final _new_StringList_0Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<wire_StringList> Function(ffi.Int32)>>(
      'new_StringList_0');
  late final _new_StringList_0 = _new_StringList_0Ptr
      .asFunction<ffi.Pointer<wire_StringList> Function(int)>();

  wire_Table new_Table() {
    return _new_Table();
  }

  late final _new_TablePtr =
      _lookup<ffi.NativeFunction<wire_Table Function()>>('new_Table');
  late final _new_Table = _new_TablePtr.asFunction<wire_Table Function()>();

  wire_WFunc new_WFunc() {
    return _new_WFunc();
  }

  late final _new_WFuncPtr =
      _lookup<ffi.NativeFunction<wire_WFunc Function()>>('new_WFunc');
  late final _new_WFunc = _new_WFuncPtr.asFunction<wire_WFunc Function()>();

  ffi.Pointer<wire_WFunc> new_box_autoadd_WFunc_0() {
    return _new_box_autoadd_WFunc_0();
  }

  late final _new_box_autoadd_WFunc_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_WFunc> Function()>>(
          'new_box_autoadd_WFunc_0');
  late final _new_box_autoadd_WFunc_0 = _new_box_autoadd_WFunc_0Ptr
      .asFunction<ffi.Pointer<wire_WFunc> Function()>();

  ffi.Pointer<wire_Atomics> new_box_autoadd_atomics_0() {
    return _new_box_autoadd_atomics_0();
  }

  late final _new_box_autoadd_atomics_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_Atomics> Function()>>(
          'new_box_autoadd_atomics_0');
  late final _new_box_autoadd_atomics_0 = _new_box_autoadd_atomics_0Ptr
      .asFunction<ffi.Pointer<wire_Atomics> Function()>();

  ffi.Pointer<ffi.Bool> new_box_autoadd_bool_0(
    bool value,
  ) {
    return _new_box_autoadd_bool_0(
      value,
    );
  }

  late final _new_box_autoadd_bool_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Bool> Function(ffi.Bool)>>(
          'new_box_autoadd_bool_0');
  late final _new_box_autoadd_bool_0 = _new_box_autoadd_bool_0Ptr
      .asFunction<ffi.Pointer<ffi.Bool> Function(bool)>();

  ffi.Pointer<wire_CompiledModule> new_box_autoadd_compiled_module_0() {
    return _new_box_autoadd_compiled_module_0();
  }

  late final _new_box_autoadd_compiled_module_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_CompiledModule> Function()>>(
          'new_box_autoadd_compiled_module_0');
  late final _new_box_autoadd_compiled_module_0 =
      _new_box_autoadd_compiled_module_0Ptr
          .asFunction<ffi.Pointer<wire_CompiledModule> Function()>();

  ffi.Pointer<wire_MemoryTy> new_box_autoadd_memory_ty_0() {
    return _new_box_autoadd_memory_ty_0();
  }

  late final _new_box_autoadd_memory_ty_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_MemoryTy> Function()>>(
          'new_box_autoadd_memory_ty_0');
  late final _new_box_autoadd_memory_ty_0 = _new_box_autoadd_memory_ty_0Ptr
      .asFunction<ffi.Pointer<wire_MemoryTy> Function()>();

  ffi.Pointer<wire_ModuleConfig> new_box_autoadd_module_config_0() {
    return _new_box_autoadd_module_config_0();
  }

  late final _new_box_autoadd_module_config_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_ModuleConfig> Function()>>(
          'new_box_autoadd_module_config_0');
  late final _new_box_autoadd_module_config_0 =
      _new_box_autoadd_module_config_0Ptr
          .asFunction<ffi.Pointer<wire_ModuleConfig> Function()>();

  ffi.Pointer<wire_ModuleConfigWasmi> new_box_autoadd_module_config_wasmi_0() {
    return _new_box_autoadd_module_config_wasmi_0();
  }

  late final _new_box_autoadd_module_config_wasmi_0Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<wire_ModuleConfigWasmi> Function()>>(
      'new_box_autoadd_module_config_wasmi_0');
  late final _new_box_autoadd_module_config_wasmi_0 =
      _new_box_autoadd_module_config_wasmi_0Ptr
          .asFunction<ffi.Pointer<wire_ModuleConfigWasmi> Function()>();

  ffi.Pointer<wire_ModuleConfigWasmtime>
      new_box_autoadd_module_config_wasmtime_0() {
    return _new_box_autoadd_module_config_wasmtime_0();
  }

  late final _new_box_autoadd_module_config_wasmtime_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_ModuleConfigWasmtime>
              Function()>>('new_box_autoadd_module_config_wasmtime_0');
  late final _new_box_autoadd_module_config_wasmtime_0 =
      _new_box_autoadd_module_config_wasmtime_0Ptr
          .asFunction<ffi.Pointer<wire_ModuleConfigWasmtime> Function()>();

  ffi.Pointer<wire_TableArgs> new_box_autoadd_table_args_0() {
    return _new_box_autoadd_table_args_0();
  }

  late final _new_box_autoadd_table_args_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_TableArgs> Function()>>(
          'new_box_autoadd_table_args_0');
  late final _new_box_autoadd_table_args_0 = _new_box_autoadd_table_args_0Ptr
      .asFunction<ffi.Pointer<wire_TableArgs> Function()>();

  ffi.Pointer<ffi.Uint32> new_box_autoadd_u32_0(
    int value,
  ) {
    return _new_box_autoadd_u32_0(
      value,
    );
  }

  late final _new_box_autoadd_u32_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint32> Function(ffi.Uint32)>>(
          'new_box_autoadd_u32_0');
  late final _new_box_autoadd_u32_0 = _new_box_autoadd_u32_0Ptr
      .asFunction<ffi.Pointer<ffi.Uint32> Function(int)>();

  ffi.Pointer<ffi.Uint64> new_box_autoadd_u64_0(
    int value,
  ) {
    return _new_box_autoadd_u64_0(
      value,
    );
  }

  late final _new_box_autoadd_u64_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint64> Function(ffi.Uint64)>>(
          'new_box_autoadd_u64_0');
  late final _new_box_autoadd_u64_0 = _new_box_autoadd_u64_0Ptr
      .asFunction<ffi.Pointer<ffi.Uint64> Function(int)>();

  ffi.Pointer<ffi.UintPtr> new_box_autoadd_usize_0(
    int value,
  ) {
    return _new_box_autoadd_usize_0(
      value,
    );
  }

  late final _new_box_autoadd_usize_0Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.UintPtr> Function(ffi.UintPtr)>>(
      'new_box_autoadd_usize_0');
  late final _new_box_autoadd_usize_0 = _new_box_autoadd_usize_0Ptr
      .asFunction<ffi.Pointer<ffi.UintPtr> Function(int)>();

  ffi.Pointer<wire_WasiConfigNative> new_box_autoadd_wasi_config_native_0() {
    return _new_box_autoadd_wasi_config_native_0();
  }

  late final _new_box_autoadd_wasi_config_native_0Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<wire_WasiConfigNative> Function()>>(
      'new_box_autoadd_wasi_config_native_0');
  late final _new_box_autoadd_wasi_config_native_0 =
      _new_box_autoadd_wasi_config_native_0Ptr
          .asFunction<ffi.Pointer<wire_WasiConfigNative> Function()>();

  ffi.Pointer<wire_WasiStackLimits> new_box_autoadd_wasi_stack_limits_0() {
    return _new_box_autoadd_wasi_stack_limits_0();
  }

  late final _new_box_autoadd_wasi_stack_limits_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_WasiStackLimits> Function()>>(
          'new_box_autoadd_wasi_stack_limits_0');
  late final _new_box_autoadd_wasi_stack_limits_0 =
      _new_box_autoadd_wasi_stack_limits_0Ptr
          .asFunction<ffi.Pointer<wire_WasiStackLimits> Function()>();

  ffi.Pointer<wire_WasmVal> new_box_autoadd_wasm_val_0() {
    return _new_box_autoadd_wasm_val_0();
  }

  late final _new_box_autoadd_wasm_val_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_WasmVal> Function()>>(
          'new_box_autoadd_wasm_val_0');
  late final _new_box_autoadd_wasm_val_0 = _new_box_autoadd_wasm_val_0Ptr
      .asFunction<ffi.Pointer<wire_WasmVal> Function()>();

  ffi.Pointer<wire_WasmitInstanceId> new_box_autoadd_wasmit_instance_id_0() {
    return _new_box_autoadd_wasmit_instance_id_0();
  }

  late final _new_box_autoadd_wasmit_instance_id_0Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<wire_WasmitInstanceId> Function()>>(
      'new_box_autoadd_wasmit_instance_id_0');
  late final _new_box_autoadd_wasmit_instance_id_0 =
      _new_box_autoadd_wasmit_instance_id_0Ptr
          .asFunction<ffi.Pointer<wire_WasmitInstanceId> Function()>();

  ffi.Pointer<wire_WasmitModuleId> new_box_autoadd_wasmit_module_id_0() {
    return _new_box_autoadd_wasmit_module_id_0();
  }

  late final _new_box_autoadd_wasmit_module_id_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_WasmitModuleId> Function()>>(
          'new_box_autoadd_wasmit_module_id_0');
  late final _new_box_autoadd_wasmit_module_id_0 =
      _new_box_autoadd_wasmit_module_id_0Ptr
          .asFunction<ffi.Pointer<wire_WasmitModuleId> Function()>();

  ffi.Pointer<wire_WasmitSharedMemory>
      new_box_autoadd_wasmit_shared_memory_0() {
    return _new_box_autoadd_wasmit_shared_memory_0();
  }

  late final _new_box_autoadd_wasmit_shared_memory_0Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<wire_WasmitSharedMemory> Function()>>(
      'new_box_autoadd_wasmit_shared_memory_0');
  late final _new_box_autoadd_wasmit_shared_memory_0 =
      _new_box_autoadd_wasmit_shared_memory_0Ptr
          .asFunction<ffi.Pointer<wire_WasmitSharedMemory> Function()>();

  ffi.Pointer<wire_list_env_variable> new_list_env_variable_0(
    int len,
  ) {
    return _new_list_env_variable_0(
      len,
    );
  }

  late final _new_list_env_variable_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_list_env_variable> Function(
              ffi.Int32)>>('new_list_env_variable_0');
  late final _new_list_env_variable_0 = _new_list_env_variable_0Ptr
      .asFunction<ffi.Pointer<wire_list_env_variable> Function(int)>();

  ffi.Pointer<wire_list_module_import> new_list_module_import_0(
    int len,
  ) {
    return _new_list_module_import_0(
      len,
    );
  }

  late final _new_list_module_import_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_list_module_import> Function(
              ffi.Int32)>>('new_list_module_import_0');
  late final _new_list_module_import_0 = _new_list_module_import_0Ptr
      .asFunction<ffi.Pointer<wire_list_module_import> Function(int)>();

  ffi.Pointer<wire_list_preopened_dir> new_list_preopened_dir_0(
    int len,
  ) {
    return _new_list_preopened_dir_0(
      len,
    );
  }

  late final _new_list_preopened_dir_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_list_preopened_dir> Function(
              ffi.Int32)>>('new_list_preopened_dir_0');
  late final _new_list_preopened_dir_0 = _new_list_preopened_dir_0Ptr
      .asFunction<ffi.Pointer<wire_list_preopened_dir> Function(int)>();

  ffi.Pointer<wire_list_value_ty> new_list_value_ty_0(
    int len,
  ) {
    return _new_list_value_ty_0(
      len,
    );
  }
